syntax = "proto3";

package internal_api_template_service;

service InternalApiTemplateService {
  rpc InternalApiTemplateRequest (TemplateRequest) returns (stream TemplateReply);
}

message TemplateRequest {
  string name = 1;
}

message TemplateReply {
  string message = 1;
}
